Restore missing accessors for analytics and settlement